Updated 1 file via CloudCannon.

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,12 @@
-title: Justice
-description: Working with people for over 50 years. Justice Law strives to excel for all clients in every situation.
-contact_email_address: contact@example.com
-phone: (03) 123 4567
-address: 123 Example Street, Gooseburb, 9876, Ducktown, New Zealand
-postal_address: PO Box 123, Ducktown, New Zealand
+title: Bengi Law
+description: >-
+  Working with people for over 50 years. Justice Law strives to excel for all
+  clients in every situation.
+contact_email_address: berk.bengi@bengilaw.com
+phone: +90 (0)534 497 8964
+address: >-
+  Merkez Mah., Abide-i Hürriyet Cad., Hasat Sok., No:3, D:2, 34381, Şişli,
+  İstanbul, Türkiye
+postal_address: >-
+  Merkez Mah., Abide-i Hürriyet Cad., Hasat Sok., No:3, D:2, 34381, Şişli,
+  İstanbul, Türkiye
