Updated 3 files via CloudCannon.

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,6 @@
 title: Bengi Law
 description: >-
-  Working with people for over 50 years. Justice Law strives to excel for all
+  Working with people for over 50 years. Bengi Law strives to excel for all
   clients in every situation.
 contact_email_address: berk.bengi@bengilaw.com
 phone: +90 (0)534 497 8964
