--- a/_data/company.yml
+++ b/_data/company.yml
@@ -4,9 +4,7 @@ description: >-
   clients in every situation.
 contact_email_address: berk.bengi@bengilaw.com
 phone: +90 (0)534 497 8964
-address: >-
-  Merkez Mah., Abide-i Hürriyet Cad., Hasat Sok., No:3, D:2, 34381, Şişli,
-  İstanbul, Türkiye
+address: Abide-i Hürriyet Cad., Hasat Sok., No:3, Şişli, İstanbul
 postal_address: >-
   Merkez Mah., Abide-i Hürriyet Cad., Hasat Sok., No:3, D:2, 34381, Şişli,
   İstanbul, Türkiye
