Updated 1 file via CloudCannon.

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -4,7 +4,9 @@ description: >-
   clients in every situation.
 contact_email_address: berk.bengi@bengilaw.com
 phone: +90 (0)534 497 8964
-address: Abide-i Hürriyet Cad., Hasat Sok., No:3, Şişli, İstanbul
+address: >-
+  Merkez Mah. Abide-i Hürriyet Cad. Hasat Sok. No:3 D:2 34381 Şişli İstanbul
+  Türkiye
 postal_address: >-
-  Merkez Mah., Abide-i Hürriyet Cad., Hasat Sok., No:3, D:2, 34381, Şişli,
-  İstanbul, Türkiye
+  Merkez Mah. Abide-i Hürriyet Cad. Hasat Sok. No:3 D:2 34381 Şişli İstanbul
+  Türkiye
