--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Justice Template
-url: "https://orchid-heron.cloudvent.net"
+title: Bengi Law
+url: "https://mighty-kudu.cloudvent.net/"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,20 +10,20 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Jekyll template with example content for a law firm.
+description: Bengi Law firm main web presence.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Justice Template
+  name: Bengi Law
   links:
-    - https://github.com/CloudCannon/justice-jekyll-template
+    - https://github.com/bengilaw
 
 # -----
 # Build
 
-timezone: Etc/UTC
+timezone: Europe/Istanbul
 
 paginate: 10
 paginate_path: "/blog/:num/"
