--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Bengi Law firm main web presence.
+description: Bengi Law web presence
 author:
   name:
   email:
