--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Bengi Law
 url: "https://mighty-kudu.cloudvent.net/"
 baseurl:
 google_analytics_key:
-google_maps_javascript_api_key:
+google_maps_javascript_api_key: AIzaSyDHDsK5k5IPcOV5eyPxGXNJSCRZt0wXfFM
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
