Updated 1 file via CloudCannon.

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -3,7 +3,7 @@ description: >-
   Working with people for over 50 years. Bengi Law strives to excel for all
   clients in every situation.
 contact_email_address: berk.bengi@bengilaw.com
-phone: +90 (0)534 497 8964
+phone: +90 534 497 8964
 address: >-
   Merkez Mah. Abide-i Hürriyet Cad. Hasat Sok. No:3 D:2 34381
   Şişli/İstanbul-Türkiye
