Updated 1 file via CloudCannon.

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -7,6 +7,4 @@ phone: +90 534 497 8964
 address: >-
   Merkez Mah. Abide-i Hürriyet Cad. Hasat Sok. No:3 D:2 34381
   Şişli/İstanbul-Türkiye
-postal_address: >-
-  Merkez Mah. Abide-i Hürriyet Cad. Hasat Sok. No:3 D:2 34381
-  Şişli/İstanbul-Türkiye
+postal_address:
